force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Mortgage_Balance__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Balance__c</fullName>
    <label>Mortgage Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>