force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Mortgage_Interest_paid_to_banks_etc__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Interest_paid_to_banks_etc__c</fullName>
    <label>Mortgage Interest (paid to banks, etc.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>