force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Text field for a user to enter the name of a row/item on a spreads schedule.</description>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>