force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Name_of_Debtor__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Debtor__c</fullName>
    <label>Name of Debtor</label>
    <type>TextArea</type>
</CustomField>