force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Name_of_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Insurance_Company__c</fullName>
    <label>Name of Insurance Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>