force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Name_of_Payer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Payer__c</fullName>
    <label>Name of Payer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>