force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Net_Farm_Rental_Income_or_Loss__c.field-meta.xml
<CustomField>
    <fullName>Net_Farm_Rental_Income_or_Loss__c</fullName>
    <label>Net Farm Rental Income or (Loss)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>