force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Net_Rental_Real_Estate_Income__c.field-meta.xml
<CustomField>
    <fullName>Net_Rental_Real_Estate_Income__c</fullName>
    <label>Net Rental Real Estate Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>