force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Net_Short_Term_Capital_Gain__c.field-meta.xml
<CustomField>
    <fullName>Net_Short_Term_Capital_Gain__c</fullName>
    <label>Net Short Term Capital Gain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>