force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <label>No. of Head</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>