force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/No_Shares__c.field-meta.xml
<CustomField>
    <fullName>No_Shares__c</fullName>
    <label>No. Shares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>