force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>The number of units for spreads schedules</description>
    <inlineHelpText>Please enter the number of units.</inlineHelpText>
    <label>Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>