force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units__c</fullName>
    <label>Number of Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>