force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Office_Expense__c.field-meta.xml
<CustomField>
    <fullName>Office_Expense__c</fullName>
    <label>Office Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>