force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Ordinary_Business_Income__c.field-meta.xml
<CustomField>
    <fullName>Ordinary_Business_Income__c</fullName>
    <label>Ordinary Business Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>