force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Ordinary_Dividends__c.field-meta.xml
<CustomField>
    <fullName>Ordinary_Dividends__c</fullName>
    <label>Ordinary Dividends</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>