force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Original_Balance__c.field-meta.xml
<CustomField>
    <fullName>Original_Balance__c</fullName>
    <label>Original Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>