force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Other_Expenses_Non_Cash__c.field-meta.xml
<CustomField>
    <fullName>Other_Expenses_Non_Cash__c</fullName>
    <label>Other Expenses (Non-Cash)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>