force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Other_Information__c.field-meta.xml
<CustomField>
    <fullName>Other_Information__c</fullName>
    <label>Other Information</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>