force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Other_Portfolio_Non_Bus_Income__c.field-meta.xml
<CustomField>
    <fullName>Other_Portfolio_Non_Bus_Income__c</fullName>
    <label>Other Portfolio &amp; Non-Bus Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>