force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Outstanding_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Loan_Amount__c</fullName>
    <label>Outstanding Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>