force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Over_Ninety_Days__c.field-meta.xml
<CustomField>
    <fullName>Over_Ninety_Days__c</fullName>
    <label>Over Ninety Days</label>
    <length>50</length>
    <type>Text</type>
</CustomField>