force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Owner_of_Policy__c.field-meta.xml
<CustomField>
    <fullName>Owner_of_Policy__c</fullName>
    <label>Owner of Policy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>