force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/P_I_Payment_Required__c.field-meta.xml
<CustomField>
    <fullName>P_I_Payment_Required__c</fullName>
    <label>P&amp;I Payment Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>