force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Pass_Through_Dividend_Income_from_K1__c.field-meta.xml
<CustomField>
    <fullName>Pass_Through_Dividend_Income_from_K1__c</fullName>
    <label>Pass Through Dividend Income from K1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>