force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Pass_Through_Interest_From_K_c__c.field-meta.xml
<CustomField>
    <fullName>Pass_Through_Interest_From_K_c__c</fullName>
    <label>Pass_Through_Interest_From_K_</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>