force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <label>Payment Frequency</label>
    <length>25</length>
    <type>Text</type>
</CustomField>