force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Pension_and_Profit_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Pension_and_Profit_Sharing__c</fullName>
    <label>Pension and Profit Sharing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>