force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Pension_Profit_Sharing_plans__c.field-meta.xml
<CustomField>
    <fullName>Pension_Profit_Sharing_plans__c</fullName>
    <label>Pension &amp; Profit-Sharing plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>