force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Percent_Adjust__c.field-meta.xml
<CustomField>
    <fullName>Percent_Adjust__c</fullName>
    <label>Percent Adjust</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>