force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Percent_Owned__c.field-meta.xml
<CustomField>
    <fullName>Percent_Owned__c</fullName>
    <label>Percent Owned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>