force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Personal_Liability__c.field-meta.xml
<CustomField>
    <fullName>Personal_Liability__c</fullName>
    <label>$ Personal Liability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>