force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Pledged__c.field-meta.xml
<CustomField>
    <fullName>Pledged__c</fullName>
    <label>Pledged</label>
    <length>10</length>
    <type>Text</type>
</CustomField>