force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Potential_Gross_Base_Rent__c.field-meta.xml
<CustomField>
    <fullName>Potential_Gross_Base_Rent__c</fullName>
    <label>Potential Gross Base Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>