force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Price_Per_Head__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Head__c</fullName>
    <label>Price Per Head</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>