force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Principal_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Principal_Distribution__c</fullName>
    <label>Principal Distribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>