force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Prior_Lien_Amount__c.field-meta.xml
<CustomField>
    <fullName>Prior_Lien_Amount__c</fullName>
    <label>Prior Lien Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>