force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Prior_Lien_Holder__c.field-meta.xml
<CustomField>
    <fullName>Prior_Lien_Holder__c</fullName>
    <label>Prior Lien Holder</label>
    <length>50</length>
    <type>Text</type>
</CustomField>