force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Proceeds__c.field-meta.xml
<CustomField>
    <fullName>Proceeds__c</fullName>
    <label>Proceeds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>