force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Production__c.field-meta.xml
<CustomField>
    <fullName>Production__c</fullName>
    <description>For a user to enter or calculate the production (number of bushels, lbs, CWT, etc.) in an Ag schedule.</description>
    <label>Production</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>