force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Production_Per_Head__c.field-meta.xml
<CustomField>
    <fullName>Production_Per_Head__c</fullName>
    <label>Production Per Head</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>