force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property</label>
    <length>50</length>
    <type>Text</type>
</CustomField>