force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Proposed_Loan__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Loan__c</fullName>
    <label>Proposed Loan</label>
    <type>TextArea</type>
</CustomField>