force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Proprietor_or_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Proprietor_or_Business_Name__c</fullName>
    <label>Proprietor or Business Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>