force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Purchase_Asset__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Asset__c</fullName>
    <label>Purchase Asset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>