force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Purchased_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Purchased_This_Year__c</fullName>
    <label>Purchased This Year</label>
    <length>18</length>
    <type>Text</type>
</CustomField>