force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Real_Estate_Type__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate_Type__c</fullName>
    <label>Real Estate Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>