force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Rental_And_Royalty_Inc_Loss__c.field-meta.xml
<CustomField>
    <fullName>Rental_And_Royalty_Inc_Loss__c</fullName>
    <label>Rental And Royalty Inc Loss</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>