force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Rental_and_Royalty_Income__c.field-meta.xml
<CustomField>
    <fullName>Rental_and_Royalty_Income__c</fullName>
    <label>Rental and Royalty Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>