force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Repairs__c.field-meta.xml
<CustomField>
    <fullName>Repairs__c</fullName>
    <label>Repairs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>