force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Repairs_and_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Repairs_and_Maintenance__c</fullName>
    <label>Repairs and Maintenance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>