force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Reported_Value__c.field-meta.xml
<CustomField>
    <fullName>Reported_Value__c</fullName>
    <description>For the user to enter the customer reported value of a spreads schedule item/row</description>
    <inlineHelpText>The value as reported by the customer/member/client</inlineHelpText>
    <label>Reported Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>