force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Reserve_Per_Room__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Per_Room__c</fullName>
    <label>Reserve Per Room</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>