force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Reserves_Per_Room__c.field-meta.xml
<CustomField>
    <fullName>Reserves_Per_Room__c</fullName>
    <label>Reserves Per Room</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>