force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Reserves_Per_Square_Ft__c.field-meta.xml
<CustomField>
    <fullName>Reserves_Per_Square_Ft__c</fullName>
    <label>Reserves Per Square Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>