force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Reserves_per_Unit_Slip_Pad__c.field-meta.xml
<CustomField>
    <fullName>Reserves_per_Unit_Slip_Pad__c</fullName>
    <label>Reserves per Unit Slip Pad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>