force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Returns_and_Allowances__c.field-meta.xml
<CustomField>
    <fullName>Returns_and_Allowances__c</fullName>
    <label>Returns and Allowances</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>