force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/RevPar__c.field-meta.xml
<CustomField>
    <fullName>RevPar__c</fullName>
    <label>RevPar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>