force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Rooms_Occupied__c.field-meta.xml
<CustomField>
    <fullName>Rooms_Occupied__c</fullName>
    <label>Rooms Occupied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>