force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Royalties_Received__c.field-meta.xml
<CustomField>
    <fullName>Royalties_Received__c</fullName>
    <label>Royalties Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>