force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/S_Corp_K_1_Net_Cash_Flow__c.field-meta.xml
<CustomField>
    <fullName>S_Corp_K_1_Net_Cash_Flow__c</fullName>
    <label>S-Corp K-1 Net Cash Flow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>