force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Sales_Units__c.field-meta.xml
<CustomField>
    <fullName>Sales_Units__c</fullName>
    <label>Sales Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>