force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Sales_Weight__c.field-meta.xml
<CustomField>
    <fullName>Sales_Weight__c</fullName>
    <label>Sales Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>