force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Savings__c.field-meta.xml
<CustomField>
    <fullName>Savings__c</fullName>
    <label>Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>