force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Secured_Unsecured__c.field-meta.xml
<CustomField>
    <fullName>Secured_Unsecured__c</fullName>
    <label>Secured/Unsecured</label>
    <length>50</length>
    <type>Text</type>
</CustomField>