force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Security_Description__c.field-meta.xml
<CustomField>
    <fullName>Security_Description__c</fullName>
    <label>Security Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>