force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Serial_Num_Vehicle_Iden_Num__c.field-meta.xml
<CustomField>
    <fullName>Serial_Num_Vehicle_Iden_Num__c</fullName>
    <label>Serial Num Vehicle Iden Num</label>
    <length>50</length>
    <type>Text</type>
</CustomField>