force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Sold_Since_Last_Statement__c.field-meta.xml
<CustomField>
    <fullName>Sold_Since_Last_Statement__c</fullName>
    <label>Sold Since Last Statement</label>
    <length>18</length>
    <type>Text</type>
</CustomField>