force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Stated_Value__c.field-meta.xml
<CustomField>
    <fullName>Stated_Value__c</fullName>
    <label>Stated Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>