force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Supplies__c.field-meta.xml
<CustomField>
    <fullName>Supplies__c</fullName>
    <label>Supplies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>