force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Taxable_Ag_Program_Payments__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Ag_Program_Payments__c</fullName>
    <label>Taxable Ag Program Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>