force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Taxable_Coop_Distributions__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Coop_Distributions__c</fullName>
    <label>Taxable Coop Distributions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>