force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Taxable_Crop_Insur_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Crop_Insur_Proceeds__c</fullName>
    <label>Taxable Crop Insur. Proceeds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>