force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Taxable_Loans_Forfeited__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Loans_Forfeited__c</fullName>
    <label>Taxable Loans Forfeited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>