force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Taxes_and_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Taxes_and_Licenses__c</fullName>
    <label>Taxes and Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>