force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Tenant_Type__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Type__c</fullName>
    <label>Tenant Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>