force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Tentative_Profit_or_Loss__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Profit_or_Loss__c</fullName>
    <label>Tentative Profit or Loss</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>