force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Test_Entry__c.field-meta.xml
<CustomField>
    <fullName>Test_Entry__c</fullName>
    <label>Test Entry</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>