force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Total_Available_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Total_Available_Rooms__c</fullName>
    <label>Total Available Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>