force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Total_Distribution_to_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Total_Distribution_to_Beneficiary__c</fullName>
    <label>Total Distribution to Beneficiary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>